src/snapshots/alma__infer__tests__test_infer_expression__pattern_matching_or_pattern-5.snap
---
source: src/infer.rs
assertion_line: 2936
expression: "infer(\"\\\nwhen 1 is\n    a | 2 as a | 3 as a -> True\n            \")"
---
Input:

when 1 is
    a | 2 as a | 3 as a -> True
            

---
Output:

module Alma



False : ∀ ∅ . Bool

True : ∀ ∅ . Bool



add : ∀ ∅ . Float -> Float -> Float

and_ : ∀ ∅ . Bool -> Bool -> Bool

div : ∀ ∅ . Float -> Float -> Float

eq : ∀ a . a -> a -> Bool

ge : ∀ ∅ . Float -> Float -> Bool

gt : ∀ ∅ . Float -> Float -> Bool

le : ∀ ∅ . Float -> Float -> Bool

lt : ∀ ∅ . Float -> Float -> Bool

mult : ∀ ∅ . Float -> Float -> Float

ne : ∀ a . a -> a -> Bool

or_ : ∀ ∅ . Bool -> Bool -> Bool

sub : ∀ ∅ . Float -> Float -> Float


module Test

test : ∀ ∅ . Bool
